--- a/アウトプット課題/Practice01_4/Practice01_4.css
+++ b/アウトプット課題/Practice01_4/Practice01_4.css
@@ -1,7 +1,4 @@
-/* styles.css */
-
 body {
-    font-family: Arial, sans-serif;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -9,8 +6,27 @@ body {
     margin: 0;
 }
 
-btn {
-    padding: 10px 20px;
+.slot-machine {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.slot {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.number {
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+
+.start-btn,
+.stop-btn {
+    padding: 10px;
     font-size: 16px;
     cursor: pointer;
 }
