--- a/アウトプット課題/Practice01_4/Practice01_4.css
+++ b/アウトプット課題/Practice01_4/Practice01_4.css
@@ -14,7 +14,7 @@ body {
 
 .slot {
     display: flex;
-    flex-direction: row; /* 修正: スロット内の要素を横並びに */
+    flex-direction: column; /* 修正: スロット内の要素を横並びに */
     align-items: center;
     margin-bottom: 20px;
 }
