--- a/アウトプット課題/Practice01_4/Practice01_4.css
+++ b/アウトプット課題/Practice01_4/Practice01_4.css
@@ -1,33 +1,9 @@
-body {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    margin: 0;
+.w33{
+    width: 33%;
+    text-align: center;
 }
 
-.slot-machine {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.slot {
-    display: flex;
-    flex-direction: column; /* 修正: スロット内の要素を横並びに */
-    align-items: center;
-    margin-bottom: 20px;
-}
-
-.number {
-    font-size: 24px;
-    margin-right: 10px; /* 数字の間隔を設定 */
-}
-
-.start-btn,
-.stop-btn {
-    padding: 10px;
-    font-size: 16px;
-    cursor: pointer;
-    margin-right: 10px; /* ボタンの間隔を設定 */
+.w100{
+    width: 100%;
+    text-align: center;
 }
