--- a/アウトプット課題/Practice01_4/Practice01_4.css
+++ b/アウトプット課題/Practice01_4/Practice01_4.css
@@ -1,10 +1,14 @@
-.w33{
+.w33 {
     width: 33%;
     text-align: center;
 }
 
-.w100{
+.w100 {
     width: 100%;
+    text-align: center;
+}
+
+.result {
     text-align: center;
 }
 
